[package]
name = "rutie_test_wrappable_struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rutie_test_wrappable_struct_lib"
crate-type = ["cdylib"]

[dependencies]
wasmer = "2.1.1"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
debug = true
opt-level = 0

[profile.dev]
debug = true
opt-level = 0
rpath = true
debug-assertions = true
